health-api/k8s/04-health-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-api
  namespace: health-api
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: health-api
