health-api/k8s/06-health-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: health-api-network-policy
  namespace: health-api
spec:
  podSelector:
    matchLabels:
      app: health-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: system-dashboard
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kafka
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: timeseriesdb
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flink
